#--------------------------------------------------------------------------
# File and Version Information:
#  $Id:$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V01-00-03
2017-06-16 Mikhail S. Dubrovin
- app/dcs - fix logistics of adding *.npy file

Tag: V01-00-02
2017-06-13 Mikhail S. Dubrovin
CalibParsStore.h - add Zyla
GlobalUtils.py - change Zyla::CalibV1 to Camera::CalibV1

Tag: V01-00-01
2017-06-13 Mikhail S. Dubrovin
- add support for new detector Zyla
	modified:   src/CalibParsStore.py
	modified:   src/GlobalUtils.py

Tag: V01-00-00
2017-03-23 Mikhail S. Dubrovin
- switch to github, fix ndarray indexing

Tag: V00-03-26
2017-01-30 Mikhail S. Dubrovin
- DCFileName.py - retrieve path like /reg/d/psdm through the env SIT_PSDM_DATA if available

Tag: V00-03-25
2017-01-28 Mikhail S. Dubrovin
- DCConfigParameters.py - set default calib repository to /reg/d/psdm/detector/calib

Tag: V00-03-24
2017-01-17 Mikhail S. Dubrovin
- DCBase, DCRange, DCType - add protection at h5 file input

Tag: V00-03-23
2017-01-13 Mikhail S. Dubrovin
- dcs and DCMethods - extend CLI to implicitly specified hdf5 file name

Tag: V00-03-22
2017-01-09 Mikhail S. Dubrovin
- GeometryAccess.py - fix self-documentation

Tag: V00-03-21
2017-01-04 Mikhail S. Dubrovin
- CalibParsStore, CalibParsBaseJungfrauV1 - add support for Jungfrau

Tag: V00-03-20
2016-12-19 Christopher O'Grady
- Add Jungfrau to list of area detectors

Tag: V00-03-19
2016-12-08 Mikhail S. Dubrovin
- GenericCalibPars.constants(...) - return default constants if dcs is None

Tag: V00-03-18
2016-12-01 Mikhail S. Dubrovin
- CalibParsStore.py - fix issue with non-defined attibute self.tsec

Tag: V00-03-17
2016-11-23 Jacob Scott and Christopher O'Grady